--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,13 @@ body {
   font-family: 'Open Sans', sans-serif;
   background-color: #eee;
 }
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+}
