--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -73,3 +73,22 @@
 .categoryItem:hover {
   color: #999;
 }
+
+/* anuncios */
+
+.h2 {
+  font-size: 20px;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.seeAllLink {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  margin-top: 10px;
+}
