criando slide para quando clicar no anuncio da adPage

--- a/src/pages/AdPage/AdPage.module.css
+++ b/src/pages/AdPage/AdPage.module.css
@@ -3,6 +3,7 @@
   border-radius: 5px;
   box-shadow: 0px 0px 4px #999;
   margin-bottom: 20px;
+  display: flex;
 }
 
 .adPage {
@@ -16,10 +17,21 @@
 }
 
 .adImage {
+  width: 400px;
+  height: 400px;
+  margin-right: 20px;
+}
+
+.adImage img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  height: 400px;
 }
 
 .adInfo {
-  padding: 10px;
+  flex: 1;
 }
 
 div .adName {
@@ -32,4 +44,13 @@ div .adName {
 .rightSide {
   width: 250px;
   margin-top: 20px;
+}
+
+h2 {
+  margin: 0;
+  margin-top: 20px;
+}
+
+small {
+  color: #999;
 }
