info direita com informações sobre o vendedor e o preço do produto

--- a/src/pages/AdPage/AdPage.module.css
+++ b/src/pages/AdPage/AdPage.module.css
@@ -4,6 +4,7 @@
   box-shadow: 0px 0px 4px #999;
   margin-bottom: 20px;
   display: flex;
+  padding: 10px;
 }
 
 .adPage {
@@ -38,9 +39,6 @@ div .adName {
   margin-bottom: 20px;
 }
 
-.adDescription {
-}
-
 .rightSide {
   width: 250px;
   margin-top: 20px;
@@ -53,4 +51,42 @@ h2 {
 
 small {
   color: #999;
+}
+
+.price {
+  padding: 10px;
+}
+
+.price span {
+  color: #0000ff;
+  display: block;
+  font-size: 27px;
+  font-weight: bold;
+}
+
+.contactSellerLink {
+  background-color: #0000ff;
+  color: #fff;
+  height: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 4px #999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+small {
+  display: block;
+  color: #999;
+  margin-top: 10px;
+}
+
+.createdBy {
+  display: block;
+}
+
+.createdBy strong {
+  display: block;
 }
