--- a/src/pages/Ads/Ads.module.css
+++ b/src/pages/Ads/Ads.module.css
@@ -1,11 +1,61 @@
 .ads {
   display: flex;
-  margin-top: 20px;
+  padding-top: 20px;
   gap: 10px;
 }
 
 .leftSide {
   width: 250px;
+}
+
+.filterName {
+  font-size: 15px;
+  margin: 10px 0;
+}
+
+input,
+select {
+  width: 100%;
+  height: 40px;
+  border: 2px solid #9bb83c;
+  border-radius: 5px;
+  outline: 0; /* esse outline eh para tirar a borda azul quando estiver selecionado */
+  font-size: 15px;
+  color: #000;
+  padding: 10px;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.categoryItem {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 5px;
+  color: #000;
+  cursor: pointer;
+  transition: all ease 0.4s;
+}
+
+.categoryItem img {
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+}
+
+.categoryItem span {
+  font-size: 14px;
+}
+
+.categoryItem:hover,
+.categoryItem.active {
+  background-color: #9bb83c;
+  color: #fff;
 }
 
 .rightSide {
