criando o estado de carregamento e o de produtos não encontrados nas buscas que não foi obtido resultados

--- a/src/pages/Ads/Ads.module.css
+++ b/src/pages/Ads/Ads.module.css
@@ -67,6 +67,11 @@ li {
   font-size: 18px;
 }
 
+.listWarning {
+  padding: 30px;
+  text-align: center;
+}
+
 .listRight {
   display: flex;
   flex-wrap: wrap;
